# weather_traffic

./: .env.example  .gitignore  CLAUDE.md  README.md  render.yaml
.claude/agents/: astro-frontend.md  data-collector.md  weather-traffic-analyst.md
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/agent/: analyst.py  claude_client.py  models.py  prompts.py
backend/app/api/: agent.py  traffic.py  weather.py
backend/app/core/: config.py
backend/app/data/: met_norway.py  vegvesen.py  vegvesen_scheduler.py
backend/app/db/: __init__.py  repositories.py  schema.py  session.py
backend/scripts/: seed_demo.py
docs/: AI_WORKFLOW.md  ARCHITECTURE.md  DEPLOY.md  agent-design.md  api-sources.md
docs/design/: DESIGN.md
docs/design/raw/: prototype.html
frontend/: README.md  package-lock.json  package.json  tailwind.config.mjs
frontend/src/components/: Nav.astro
frontend/src/data/: mock-correlation.ts
frontend/src/i18n/: en.json  index.ts  no.json
frontend/src/islands/: AIAnalysisCard.tsx  CorrelationChart.tsx  Dashboard.tsx  IncidentMap.tsx  IncidentsTable.tsx  KPIRow.tsx  LanguageToggle.tsx  WeatherCard.tsx
frontend/src/layouts/: Layout.astro
frontend/src/lib/: api.ts
frontend/src/pages/: index.astro
